# animator_lib

./: .gitignore  Cargo.toml
src/: glm_test.rs  lib.rs  math.rs  pose.rs
src/animation/: animation_tests.rs  animator.rs  controller.rs  library.rs  mod.rs  traits.rs
src/collada_load/: animation.rs  mesh.rs  mod.rs  skeleton.rs
src/collada_loader/: animation_loader.rs  mesh_loader.rs  mod.rs  skeleton_loader.rs
src/mesh/: mod.rs
src/skeleton/: bone.rs  error.rs  mod.rs
